# transfermarkt-datasets

./: .dbt-checkpoint.yaml  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  1_acquire.py  2_prepare.py  3_sync.py  CLAUDE.md  Dockerfile  Makefile  README.md  acquire.py  acquire_on_batch.sh  apprunner.yml  bootstrap.sh  cloud_lib.py  config.yml  duck.db  dvc.yaml  environment.yml  fly.toml  heroku.yml  justfile  prep.ipynb  prepare.py  prepare_on_batch.sh  publish_datasets.py  pyproject.toml  run_on_ecs.sh  run_pipeline.sh  settings.yaml  steamlit.py  streamlit.py  streamlit_app.py  sync.py  sync.sh  test.py
.devcontainer/: devcontainer.json
.dvc/: config
.github/: FUNDING.yml
.github/workflows/: acquire-national-teams.yml  acquire-openfootball.yml  acquire-tournament-games.yml  acquire-transfermarkt-api.yml  acquire-transfermarkt-scraper.yml  build-contribution.yml  build.yml  data-pipeline.yml  deploy-streamlit.yml  on-contribution.yml  on-push.yml  on-schedule.yml  scheduled.yml  sync-dataworld.yml  sync-kaggle.yml  sync-r2.yml  (+1 more)
.streamlit/: config.toml
data/: .gitignore  README.md  appearances.csv.dvc  competitions.json  countries.json  fetch_appearances.sh  fetch_raw.sh  prep.dvc  publish_datasets.py  raw.dvc  site_map_ES1.json  site_map__european_top_leagues.json  supplemental_competitions.json  tfmkt__2019-08-03__GB1_ES1__prep.csv  tournament_editions.json
dbt/: .gitignore  dbt_project.yml  field_provenance.yml  package-lock.yml  packages.yml  profiles.yml
docs/: developer-guide.md  field-level-provenance.md  vision.md
infra/: main.tf
notebooks/: chat_playbook.ipynb  prep_playbook.ipynb  validate_playbook.ipynb  viz_playbook.ipynb
prep/: .gitignore  README.md  asset_runner.py  checks.py  config.yml  datapackage_description.md  prep.ipynb  prep.py  prep_appearances.py  prep_clubs.py  prep_lib.py  test_prep.py
resources/: README.md  diagram.mmd
rill/: rill.yaml
scripts/: acquire.R  acquire.py  acquire.sh  bootstrap.sh  prepare.py  runner.sh  sync.py
streamlit/: 01_👋_about.py  Dockerfile  about.py  pyproject.toml  streamlit_app.py  utils.py
streamlit/.streamlit/: config.toml
streamlit/images/: css.html
streamlit/markdown_blocks/: about.md  css.html  explore__intro.md  how_to_use__consumer.md  how_to_use__contributor.md
streamlit/markdown_blocks/about/: intro.md
streamlit/markdown_blocks/analysis/: analysis_manager_performance.md  analysis_player_value.md
streamlit/markdown_blocks/explore/: intro.md
streamlit/pages/: 02_🔎_explore.py  03_💰_app:_player_value.py  03_📈_analysis:_coach_results.py  03_📈_analysis:_player_value.py  03_📈_analysis_top_scorers.py  04_📈_analysis:_coach_results.py  04_📈_analysis:_manager_performance.py  04_📈_app:_manager_performance.py  05_🧮_app:_match_overview.py  analyses.py  dictionary.py  explore.py  tools.py
streamlit/pages/explore_tabs/: appearances.py  clubs.py  competitions.py  games.py  player_valuations.py  players.py
tests/: test_assets.py  test_transfermark_datasets.py
transfermarkt_datasets/: .gitignore  checks.py  datapackage_description.md  transfermarkt_datasets.py
viz/: README.md
(+164 files in other folders)
