[tool.poetry]
name = "transfermarkt-datasets"
version = "0.1.0"
description = "Extract, prepare, publish and update Transfermarkt datasets."
authors = ["dcaribou <davidcereijo@live.com>"]

[tool.poetry.dependencies]
python = ">=3.8.1, <3.11, !=3.9.7"
pandas = "^1.4.2"
frictionless = "4.40.8"
pytest = "^7.1.2"
scipy = "^1.8.0"
streamlit = "1.25.0"
plotly = "^5.11.0"
transfermarkt-scraper = {git = "https://github.com/dcaribou/transfermarkt-scraper.git", branch = "main"}
dbt-duckdb = "1.7.0"
langchain = "^0.0.306"
openai = "^0.27.7"
duckdb-engine = "^0.7.3"
dvc = {extras = ["s3"], version = "^3.22.0"}
watchdog = "^3.0.0"
kaggle = "^1.6.11"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
autopep8 = "^1.7.0"
datacompy = "^0.9.0"
data-diff = "0.9.17"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
